[Enhancement] support more spm function
Signed-off-by: Seaven <seaven_7@qq.com>